# fastdi

./: .gitignore  404.html  Cargo.toml  README.md  RFC.md  _fastdi_core.pyi  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: release.yml
architecture/: index.html
benchmarks/: benchmarks.py
docs/: architecture.md  benchmarks.md  getting-started.md  index.md
docs/guides/: concepts.md  hooks.md  index.md  quickstart.md  recipes.md
docs/javascripts/: mermaid-init.js
docs/reference/: container.md  decorators.md  types.md
examples/: async_basic.py  basic.py  request_scope_async.py
fastdi/: __init__.py  _hooks.py  _python_core.py  api.py  container.py  decorators.py  rust_adapter.py  types.py
getting-started/: index.html
observability/: index.html
performance/: index.html
reference/container/: index.html
reference/decorators/: index.html
reference/types/: index.html
src/: lib.rs
tests/: test_annotated.py  test_async.py  test_basic.py  test_large_scale.py  test_methods.py  test_plan_and_hooks.py  test_plan_invalidation.py  test_python_core.py  test_rust_adapter.py
usage/: index.html
