[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fastdi"
version = "0.1.0"
description = "FastDI — Rust‑powered Dependency Injection for Python"
authors = [
  { name = "FastDI authors" }
]
readme = "RFC.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = []

[tool.maturin]
bindings = "pyo3"
# Expose the Rust module as a top-level to avoid import shadowing
module-name = "_fastdi_core"
include = ["_fastdi_core.pyi", "fastdi/py.typed"]

[dependency-groups]
dev = [
    "dependency-injector>=4.48.1",
    "fast-depends>=2.4.3",
    "maturin>=1.9.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "tabulate>=0.9.0",
]
